# atlas-toolchain

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  isa.typ  test  test.asm  test.hex
cli/atlas/: Cargo.toml
cli/atlas/src/: args.rs  main.rs
crates/atlas-assembler/: Cargo.toml  test.asm
crates/atlas-assembler/src/: error.rs  lib.rs
crates/atlas-assembler/src/lexer/: error.rs  lexer.rs  mod.rs  token.rs
crates/atlas-assembler/src/parser/: error.rs  mod.rs  parser.rs  symbols.rs
crates/atlas-files/: Cargo.toml
crates/atlas-files/src/: lib.rs
crates/atlas-files/src/formats/: hex.rs  mod.rs  obj.rs
crates/atlas-inspect/: Cargo.toml
crates/atlas-inspect/src/: disassembly.rs  formatting.rs  lib.rs  output.rs
crates/atlas-isa/: Cargo.toml
crates/atlas-isa/src/: encoder.rs  encoding_error.rs  instruction.rs  lib.rs  mnemonics.rs  object_file.rs  opcode.rs  operands.rs
crates/atlas-linker/: Cargo.toml
crates/atlas-linker/src/: error.rs  lib.rs  linker.rs
crates/atlas-simulator/: Cargo.toml  README.md
crates/atlas-simulator/src/: bus.rs  cpu.rs  error.rs  lib.rs  system.rs  traits.rs
crates/atlas-simulator/src/arch/: mod.rs
crates/atlas-simulator/src/arch/atlas8/: cpu.rs  execute.rs  mod.rs
crates/atlas-simulator/src/architectures/: mod.rs
crates/atlas-simulator/src/architectures/atlas8/: core.rs  mod.rs
crates/atlas-simulator/src/device/: ram.rs
docs/: assembly-and-linking.md  assembly-and-linking.typ
test/: io.asm  main.asm  math.asm  out.hex  output.hex
