[package]
name = "atlas"
version = "0.1.0"
edition = "2024"

[dependencies]
atlas-isa = { path = "../../crates/atlas-isa" }
atlas-assembler = { path = "../../crates/atlas-assembler" }
atlas-linker = { path = "../../crates/atlas-linker" }
atlas-files = { path = "../../crates/atlas-files" }

clap = { version = "4.5", features = ["derive"] }